<resources>
    <string name="app_name">Universal Yoga Admin</string>
    <string name="cc_capacity">Capacity</string>
    <string name="cc_time_of_course">Time Of Course</string>
    <string name="cc_duration">Duration (minutes)</string>
    <string name="cc_price_per_class">Price per Class (£)</string>

    <!--    Class Activity-->
    <string name="class_name">Class</string>
    <string name="class_date_of_class">Date Of Class</string>
    <string name="class_teacher">Teacher</string>
    <string name="class_comment">Comment</string>
    <string name="class_optional">Optional</string>

    <!--Menu-->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="update">Update</string>

    <!-- Dialog -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Search -->
    <string name="filtered_by">Filtered_by</string>
    <string name="date">Date</string>
    <string name="day_of_week">Day Of Week</string>
</resources>