<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:paddingTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditCourseActivity">


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Day of the Week -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Day of the Week"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerDayOfWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:entries="@array/days_of_week"
                android:spinnerMode="dropdown"/>

            <!-- Time of the Course -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTimeOfCourse"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/cc_time_of_course">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTime"
                    android:layout_width="match_parent"
                    android:inputType="time"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Capacity -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/cc_capacity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCapacity"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Duration -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldDuration"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/cc_duration">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDuration"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Price -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPrice"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:endIconMode="custom"
                app:endIconContentDescription="£"
                app:endIconDrawable="@drawable/euro"
                android:hint="@string/cc_price_per_class">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPrice"
                    android:layout_width="match_parent"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Type of Class -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type of Class"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerClassType"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/class_types"
                android:spinnerMode="dropdown"/>

            <!-- Additional Field Example: Difficulty Level -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                android:text="Difficulty Level"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerDifficultyLevel"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/difficulty_levels"
                android:spinnerMode="dropdown"/>

            <!-- Description -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextFieldComment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:helperText="@string/class_optional"
                android:hint="Description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:inputType="text|textMultiLine"
                    android:gravity="top" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>